--- a/index.html
+++ b/index.html
@@ -2,11 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="1o8c_6tIhnHs3TGzydSq_hucbShsFKrYYPO9_CUg2-I" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CapCut APK: A Comprehensive Guide to the Ultimate Video Editing Tool</title>
     <meta name="description" content="Discover CapCut MOD APK: Unlock premium features and editing tools for free. Create stunning videos effortlessly with advanced editing capabilities!">
     <meta name="keywords" content="CapCut MOD APK, video editing, CapCut features, MOD APK">
-    <link rel="canonical" href="https://capcut-apk.gitlab.io/apk/">
+    <meta name="author" content="Your Name">
+    <meta property="og:title" content="CapCut APK: A Comprehensive Guide to the Ultimate Video Editing Tool">
+    <meta property="og:description" content="Discover CapCut MOD APK: Unlock premium features and editing tools for free. Create stunning videos effortlessly with advanced editing capabilities!">
+    <meta property="og:image" content="https://apkcapcut.onrender.com/cap2.png">
+    <meta property="og:url" content="https://apkcapcut.onrender.com">
+    <meta property="og:type" content="article">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="CapCut APK: A Comprehensive Guide to the Ultimate Video Editing Tool">
+    <meta name="twitter:description" content="Discover CapCut MOD APK: Unlock premium features and editing tools for free. Create stunning videos effortlessly with advanced editing capabilities!">
+    <meta name="twitter:image" content="https://apkcapcut.onrender.com/cap2.png">
+    <link rel="canonical" href="https://apkcapcut.onrender.com">
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org/",
+            "@type": "Article",
+            "headline": "CapCut APK: A Comprehensive Guide to the Ultimate Video Editing Tool",
+            "description": "Discover CapCut MOD APK: Unlock premium features and editing tools for free. Create stunning videos effortlessly with advanced editing capabilities!",
+            "image": "https://apkcapcut.onrender.com/cap2.png",
+            "author": {
+                "@type": "Person",
+                "name": "Sam"
+            },
+            "publisher": {
+                "@type": "Organization",
+                "name": "CapCut APK",
+                "logo": {
+                    "@type": "ImageObject",
+                    "url": "https://apkcapcut.onrender.com/cap1.png"
+                }
+            },
+            "datePublished": "2024-09-03",
+            "dateModified": "2024-09-03"
+        }
+        </script>
+        <!-- Hreflang -->
+        <link rel="alternate" href="https://apkcapcut.onrender.com" hreflang="en">
+
     <style>
         body {
             font-family: Arial, sans-serif;
