--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <img src="cap2.png" alt="Results" class="img">
 
         <h2>What is CapCut APK?</h2>
-        <p>CapCut APK is a mobile video editing application developed by ByteDance, the same company behind the popular TikTok app. It’s designed to offer an easy-to-use platform for creating and editing videos right from your phone. The “APK” in its name refers to the Android Package Kit, which is the format used for distributing and installing apps on Android devices.</p>
+        <p><a href="https://capckutapk.com/" target="_blank">CapCutapk</a> is a mobile video editing application developed by ByteDance, the same company behind the popular TikTok app. It’s designed to offer an easy-to-use platform for creating and editing videos right from your phone. The “APK” in its name refers to the Android Package Kit, which is the format used for distributing and installing apps on Android devices.</p>
 
         <h2>Why CapCut APK?</h2>
         <p>You might be wondering, with so many video editing apps out there, what makes CapCut APK worth your attention? Here’s the lowdown on its standout features and benefits:</p>
